# suzhaobao-rust

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile-ci  LICENSE  README.md  database.sql  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: docker-image.yml  docker.yml  publish-version.yml  release.yml
config/: .gitignore  default.example.toml
crates/core/: Cargo.toml
crates/core/src/: hash.rs  lib.rs  prelude.rs  settings.rs  validation.rs
crates/core/src/error/: mod.rs
crates/core/src/model/: mod.rs
crates/core/src/model/query/: mod.rs
crates/core/src/model/query/dsl/: date_range.rs  mod.rs
crates/core/src/nickname/: mod.rs  names.rs
crates/id_photo/: Cargo.toml
crates/id_photo/src/: lib.rs
crates/id_photo/src/controllers/: mod.rs  other.rs  photo_item.rs  photos.rs  user.rs  wechat.rs
crates/id_photo/src/dtos/: mod.rs  secrets_dto.rs  user_dto.rs  wechat_dto.rs
crates/id_photo/src/middleware/: mod.rs
crates/id_photo/src/models/: app_settings.rs  mod.rs  photo_items.rs  photo_settings.rs  photos.rs  secrets.rs  user_auths.rs  users.rs
crates/id_photo/src/models/_entities/: app_settings.rs  mod.rs  photo_items.rs  photo_settings.rs  photos.rs  prelude.rs  secrets.rs  user_auths.rs  users.rs
crates/id_photo/src/services/: upload_service.rs
pkg/deb/: NOTES.md  service
