[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.0"
license = "MIT"
authors = ["Micross <me@tinlike.com>"]
repository = "https://github.com/pabsin/suzhaobao-rust"
homepage = "https://tinlike.com/"
documentation = "https://tinlike.com/"

[workspace.dependencies]
vegar_core = { path = "./crates/core", version = "0.0.0" }
id_photo = { path = "./crates/id_photo", version = "0.0.0" }

salvo = { version = "0.76.2", features = ["affix-state", "anyhow", "jwt-auth", "oapi", "cors"] }
sea-orm = { version = "1.1.5", features = [
  "sqlx-mysql",
  "runtime-tokio-native-tls",
  "macros",
  "debug-print"
] }

serde = "1.0.217"
serde_with = "3.11.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.43.0", features = ["full"] }
salvo_extra = "0.76.2"
async-trait = "0.1.86"
chrono = "0.4.39"
thiserror = "2.0.11"
argon2 = { version = "0.6.0-pre.1", features = ["std"] }
jsonwebtoken = { version = "9.3.1" }
validator = { version = "0.20.0", features = ["derive"] }
hyper = "1.6.0"
mime = "0.3.17"
include_dir = "0.7.4"
serde_json = "1.0.138"
lettre = "0.11.13"
educe = "0.6.0"
opendal = {  version = "0.51.2", features = ["services-s3"] }
mime_guess = "2.0.5"
cuid = "1.3.3"
oauth2 = "5.0.0"
reqwest = { version = "0.12.12", features = ["json"] }
config = "0.15.8"
serde_derive = "1.0.217"
lazy_static = "1.5.0"
tempfile = "3.17.1"
labrador = { version = "0.2.3"}
regex = {version = "1.11.1"}
data-encoding = { version = "2.8.0"}
redis = { version = "0.29.0", features = ["tokio-comp"] }
url = { version = "2.5.4"}
rand = {version = "0.9.0-beta.1"}
sha1 = { version = "0.11.0-pre.4"}
hmac = { version = "0.13.0-pre.4"}

[workspace.lints.rust]
unreachable_pub = "deny"

[workspace.lints.clippy]
future_not_send = "warn"
unwrap_used = "warn"
