[package]
name = "vegar_core"
version.workspace = true
description = "vegar core"
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
doctest = false

[dependencies]
salvo.workspace = true
sea-orm.workspace = true
serde.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true
thiserror.workspace = true
argon2.workspace = true
validator.workspace = true
include_dir.workspace = true
serde_json.workspace = true
lettre.workspace = true
opendal.workspace = true
reqwest.workspace = true
config.workspace = true
serde_derive.workspace = true
lazy_static.workspace = true
oauth2.workspace = true
redis.workspace = true
regex.workspace = true
data-encoding.workspace = true
rand.workspace = true
educe.workspace = true

[lints]
workspace = true
